fix: GAP-5400 add pagination for user management

--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -20,4 +20,10 @@
   .user-add{
     margin: 8px 0px
   }
+  .pagination-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
